--- a/css/AS_netolog_mq24.css
+++ b/css/AS_netolog_mq24.css
@@ -808,7 +808,7 @@ img {
 		text-align: right;
 	}
 	.about__section__be-active img, picture {
-		max-height: 100%;
+		min-height: 100%;
 	
 	}
 	.about__section__be-active__even {
